--- a/pages/navbar.css
+++ b/pages/navbar.css
@@ -24,23 +24,23 @@ label.logo {
     text-decoration: None;
     color: white
 }
-nav ul {
+nav .nav-ul {
     float: right;
     margin-right: 20px;
 }
-nav ul li {
+nav .nav-ul .nav-li {
     display: inline-block;
     line-height: 80px;
     margin: 0 50px;
 }
-nav ul li a {
+nav .nav-ul .nav-li a {
     color: white;
     font-size: 17px;
     padding: 7px 13px;
     border-radius: 3px;
     text-transform: uppercase;
 }
-a.active, a:hover {
+.nav-a.active, .nav-a:hover {
     background: #1b9bff;
     transition: .5s;
 }
@@ -62,10 +62,10 @@ a.active, a:hover {
         padding-left: 50px;
         padding: 0 50px;
     }
-    nav ul li a {
+    nav .nav-ul .nav-li .nav-a {
         font-size: 16px;
     }
-    nav ul li {
+    nav .nav-ul .nav-li {
         margin: 0 20px;
     }
 }
@@ -73,7 +73,7 @@ a.active, a:hover {
     .checkbtn {
         display: block;
     }
-    ul {
+    .nav-ul {
         position: fixed;
         width: 100%;
         height: 100vh;
@@ -81,18 +81,19 @@ a.active, a:hover {
         top: 80px;
         left: -100%;
         text-align: center;
-        transition: all .5s
+        transition: all .5s;
+        z-index: 999;
     }
-    nav ul li {
+    nav .nav-ul .nav-li {
         display: block;
         margin: 50px 0;
         line-height: 30px;
 
     }
-    nav ul li a {
+    nav .nav-ul .nav-li .nav-a {
         font-size: 20px;
     }
-    a:hover, a.active {
+    .nav-a:hover, .nav-a.active {
         background: none;
         color: #0082e6;
     }
